<resources>
    <string name="app_name">TonicApp</string>
    <string name="get_first_name">Enter Your First Name</string>
    <string name="get_last_name">Enter Your Last Name</string>
    <string name="get_full_name">Get Full Name</string>
    <string name="full_name">Full Name Will Show Here</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="reverse_order">Reverse</string>
    <string name="normal_order">Normal</string>
    <string name="action_info">Info</string>
    <string name="very_cool">Very Cool</string>
    <string name="about_logic">About My Logic</string>
    <string name="download_list">Download List</string>
    <string name="clear_names">Clear Names</string>
    <string name="blank_names">Blank Names</string>
    <string name="connection_unavailable">Connection Unavailable</string>
    <string name="could_not_connect">Could not connect to the internet. Please fix your connection and try again.</string>
    <string name="blank_info">You did not enter any names at all!\nPlease enter a first and/or last name and try again.</string>
    <string name="ok">OK</string>
    <string name="logic">This application was made for APIs 16 to 23 and demonstrates separation of concerns, listviews, layouts, connection logic, adapters, viewholder pattern, MVC, JSON Parsing, intents, dialogs, and much more.</string>
    <string name="tonic_service_started">Wow your service is now started!!!</string>
    <string name="tonic_service_ended">Ok. We just ended your service. Thank you for your time!</string>
    <string name="tonic_restart_title">Welcome Back to the Tonic Home Screen!</string>
    <string name="tonic_restart_detail">Did you repower your phone or download that list? :P</string>
</resources>
